--- a/changelog.html
+++ b/changelog.html
@@ -37,6 +37,11 @@
 <blockquote>
 <p>All notable changes to this project will be documented in this file</p>
 </blockquote>
+<h3 id="241-beta1-2023-08-16"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v2.4.0...v2.4.1-beta.1">2.4.1-beta.1</a> (2023-08-16)</h3>
+<h3 id="🐛-bug-fixes">🐛 Bug Fixes</h3>
+<ul>
+<li>update reactions count grammar (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/69">#69</a>) (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/765696a720c1767bbcb983f5b8502953ecc72446">765696a</a>)</li>
+</ul>
 <h2 id="240-2023-07-24"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v2.3.0...v2.4.0">2.4.0</a> (2023-07-24)</h2>
 <h3 id="🍕-features">🍕 Features</h3>
 <ul>
@@ -68,7 +73,7 @@
 <li>update social card design (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/52">#52</a>) (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/6a46be144b40ca4b6d406236ad71e42ed509ae90">6a46be1</a>)</li>
 </ul>
 <h2 id="220-2023-06-20"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v2.1.1...v2.2.0">2.2.0</a> (2023-06-20)</h2>
-<h3 id="🐛-bug-fixes">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-1">🐛 Bug Fixes</h3>
 <ul>
 <li>remove issue templates (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/49">#49</a>) (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/778ad4e1dc852dc4c89f642a857348dffb6991cd">778ad4e</a>)</li>
 </ul>
@@ -97,12 +102,12 @@
 <li>insights social card generation (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/51">#51</a>) (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/8a82a48690b806c17c54051128134c6cf84e2c05">8a82a48</a>)</li>
 </ul>
 <h3 id="212-beta1-2023-06-06"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v2.1.1...v2.1.2-beta.1">2.1.2-beta.1</a> (2023-06-06)</h3>
-<h3 id="🐛-bug-fixes-1">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-2">🐛 Bug Fixes</h3>
 <ul>
 <li>remove issue templates (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/49">#49</a>) (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/778ad4e1dc852dc4c89f642a857348dffb6991cd">778ad4e</a>)</li>
 </ul>
 <h3 id="211-2023-05-12"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v2.1.0...v2.1.1">2.1.1</a> (2023-05-12)</h3>
-<h3 id="🐛-bug-fixes-2">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-3">🐛 Bug Fixes</h3>
 <ul>
 <li>correct rolled back build (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/e91c43fa683299d7bd0d64b7b7abb63f56a454f1">e91c43f</a>)</li>
 </ul>
@@ -111,7 +116,7 @@
 <li>correct lint and merge issues (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/cba7521c71f7d5ef19c2be49f1b2cd6171272dc8">cba7521</a>)</li>
 </ul>
 <h3 id="211-beta1-2023-05-12"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v2.1.0...v2.1.1-beta.1">2.1.1-beta.1</a> (2023-05-12)</h3>
-<h3 id="🐛-bug-fixes-3">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-4">🐛 Bug Fixes</h3>
 <ul>
 <li>correct rolled back build (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/e91c43fa683299d7bd0d64b7b7abb63f56a454f1">e91c43f</a>)</li>
 </ul>
@@ -120,7 +125,7 @@
 <li>correct lint and merge issues (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/cba7521c71f7d5ef19c2be49f1b2cd6171272dc8">cba7521</a>)</li>
 </ul>
 <h2 id="210-2023-05-09"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v2.0.1...v2.1.0">2.1.0</a> (2023-05-09)</h2>
-<h3 id="🐛-bug-fixes-4">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-5">🐛 Bug Fixes</h3>
 <ul>
 <li>Overflowing language bar fix (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/38">#38</a>) (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/3dc1a0add116c1124af6a993e9e843015f3c0d25">3dc1a0a</a>)</li>
 </ul>
@@ -153,7 +158,7 @@
 <li>Highlight Cards UI Generation (frontend-only) (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/36">#36</a>) (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/138a847bad92eb1f35fafa467720de01646f31cc">138a847</a>)</li>
 </ul>
 <h2 id="210-beta2-2023-04-30"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v2.1.0-beta.1...v2.1.0-beta.2">2.1.0-beta.2</a> (2023-04-30)</h2>
-<h3 id="🐛-bug-fixes-5">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-6">🐛 Bug Fixes</h3>
 <ul>
 <li>Overflowing language bar fix (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/38">#38</a>) (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/3dc1a0add116c1124af6a993e9e843015f3c0d25">3dc1a0a</a>)</li>
 </ul>
@@ -163,18 +168,18 @@
 <li>adding utilities for cards local generation &amp; testing (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/34">#34</a>) (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/c5a5fecd3689b11fd3325c7f0fd3228bd368e0f5">c5a5fec</a>)</li>
 </ul>
 <h3 id="201-2023-04-19"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v2.0.0...v2.0.1">2.0.1</a> (2023-04-19)</h3>
-<h3 id="🐛-bug-fixes-6">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-7">🐛 Bug Fixes</h3>
 <ul>
 <li>correct username file system caching issues (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/076ace0b4cc856643de29cb4ef3f4e5df189c510">076ace0</a>), closes <a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/24">#24</a></li>
 <li>correctly lowercase username display in social card (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/fc9211c46e106db042b87605ee003f6ef6a3cd86">fc9211c</a>)</li>
 </ul>
 <h3 id="201-beta2-2023-04-19"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v2.0.1-beta.1...v2.0.1-beta.2">2.0.1-beta.2</a> (2023-04-19)</h3>
-<h3 id="🐛-bug-fixes-7">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-8">🐛 Bug Fixes</h3>
 <ul>
 <li>correctly lowercase username display in social card (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/fc9211c46e106db042b87605ee003f6ef6a3cd86">fc9211c</a>)</li>
 </ul>
 <h3 id="201-beta1-2023-04-19"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v2.0.0...v2.0.1-beta.1">2.0.1-beta.1</a> (2023-04-19)</h3>
-<h3 id="🐛-bug-fixes-8">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-9">🐛 Bug Fixes</h3>
 <ul>
 <li>correct username file system caching issues (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/076ace0b4cc856643de29cb4ef3f4e5df189c510">076ace0</a>), closes <a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/24">#24</a></li>
 </ul>
@@ -203,7 +208,7 @@
 <li>implement no-content verification strategy (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/6efe0e67bb61dc2d0d7aab74744019441b6e777e">6efe0e6</a>)</li>
 <li>optimize image loading and return errors (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/7c6f1995bb2922bfd9cd9e26230afd079e2e6342">7c6f199</a>), closes <a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/17">#17</a></li>
 </ul>
-<h3 id="🐛-bug-fixes-9">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-10">🐛 Bug Fixes</h3>
 <ul>
 <li>correct all tailwind classes except gaps (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/fe447116ea17755e389e5d8942ced0e721ce2145">fe44711</a>), closes <a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/7">#7</a></li>
 <li>correct app spec GET automatic rewrites of HEAD (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/3047cec62aff770abb4fe97d736c18790e406fa8">3047cec</a>)</li>
@@ -226,7 +231,7 @@
 <li>update graphql types (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/f7db7134de08b50998ce994f615b151bed35244f">f7db713</a>)</li>
 </ul>
 <h2 id="200-beta2-2023-04-11"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v2.0.0-beta.1...v2.0.0-beta.2">2.0.0-beta.2</a> (2023-04-11)</h2>
-<h3 id="🐛-bug-fixes-10">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-11">🐛 Bug Fixes</h3>
 <ul>
 <li>correct dark logo render and make it static (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/dc9f3a4eb8292b7f94108932e469209c67b33405">dc9f3a4</a>)</li>
 </ul>
@@ -235,12 +240,12 @@
 <ul>
 <li>id changed to :username in earlier commits, this is catching it up</li>
 </ul>
-<h3 id="🐛-bug-fixes-11">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-12">🐛 Bug Fixes</h3>
 <ul>
 <li>correct server generation environment (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/68d0202be3575d40a78de2b8bfe90b2bd4339b6c">68d0202</a>)</li>
 </ul>
 <h2 id="120-beta10-2023-04-10"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.2.0-beta.9...v1.2.0-beta.10">1.2.0-beta.10</a> (2023-04-10)</h2>
-<h3 id="🐛-bug-fixes-12">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-13">🐛 Bug Fixes</h3>
 <ul>
 <li>correct app spec GET automatic rewrites of HEAD (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/3047cec62aff770abb4fe97d736c18790e406fa8">3047cec</a>)</li>
 </ul>
@@ -258,7 +263,7 @@
 <ul>
 <li>implement no-content verification strategy (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/6efe0e67bb61dc2d0d7aab74744019441b6e777e">6efe0e6</a>)</li>
 </ul>
-<h3 id="🐛-bug-fixes-13">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-14">🐛 Bug Fixes</h3>
 <ul>
 <li>correct languages displaying less than 0.5% (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/bee0e6e0cf202296c1b137a499bfc48ed481db1f">bee0e6e</a>)</li>
 <li>correct zero contribution top repos language distribution (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/7d82c0d0ae279694eb47dd523797f0eea1cb9c9f">7d82c0d</a>)</li>
@@ -269,7 +274,7 @@
 <li>update live environments lins and document local development (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/08cead19189d14ff4d01a23584400c284818a091">08cead1</a>)</li>
 </ul>
 <h2 id="120-beta6-2023-04-09"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.2.0-beta.5...v1.2.0-beta.6">1.2.0-beta.6</a> (2023-04-09)</h2>
-<h3 id="🐛-bug-fixes-14">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-15">🐛 Bug Fixes</h3>
 <ul>
 <li>correct all tailwind classes except gaps (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/fe447116ea17755e389e5d8942ced0e721ce2145">fe44711</a>), closes <a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/7">#7</a></li>
 <li>correct user languages sizing issues (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/5846c42fc2531b1e085ce1c6e982ac44e2ffd556">5846c42</a>)</li>
@@ -280,7 +285,7 @@
 <ul>
 <li>add tailwind proof of concept (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/8594508a07a103fe6e209b1895c7c803e171eecb">8594508</a>)</li>
 </ul>
-<h3 id="🐛-bug-fixes-15">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-16">🐛 Bug Fixes</h3>
 <ul>
 <li>correct yoga layout double styling, remove repo icon extrenaous classes (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/d84015bf1264397d9ac6ff18b7c5344f237708ff">d84015b</a>)</li>
 </ul>
@@ -305,12 +310,12 @@
 <li>add boilerplate s3-client sdk code connected to digital ocean spaces (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/a4a71e349579e86be65ce201f2ec941177a1e3de">a4a71e3</a>)</li>
 </ul>
 <h3 id="112-2023-04-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.1.1...v1.1.2">1.1.2</a> (2023-04-04)</h3>
-<h3 id="🐛-bug-fixes-16">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-17">🐛 Bug Fixes</h3>
 <ul>
 <li>correct font usage from roboto to design (inter) (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/4748b98a99b50514c135ff4bf6f1b2de10f8939e">4748b98</a>)</li>
 </ul>
 <h3 id="111-2023-04-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.1.0...v1.1.1">1.1.1</a> (2023-04-04)</h3>
-<h3 id="🐛-bug-fixes-17">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-18">🐛 Bug Fixes</h3>
 <ul>
 <li>correct user name being displayed as login (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/19043fc359597bfa31f9e1bdc864c1a18a486fc1">19043fc</a>)</li>
 </ul>
@@ -328,17 +333,17 @@
 <li>add correct languages calculation and display (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/977df7589d67e6987cd9cb4e6528a86f46470541">977df75</a>)</li>
 </ul>
 <h3 id="104-2023-04-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.0.3...v1.0.4">1.0.4</a> (2023-04-04)</h3>
-<h3 id="🐛-bug-fixes-18">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-19">🐛 Bug Fixes</h3>
 <ul>
 <li>correct top repositories distribution and name concatenation (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/24bfb159bbe9c43e631432c69189f0ffba0c7c11">24bfb15</a>)</li>
 </ul>
 <h3 id="103-2023-04-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.0.2...v1.0.3">1.0.3</a> (2023-04-04)</h3>
-<h3 id="🐛-bug-fixes-19">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-20">🐛 Bug Fixes</h3>
 <ul>
 <li>remove static assets, get gfonts roboto versions (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/dd096caba732f9ccdc11d1b280cd18cf442327cb">dd096ca</a>)</li>
 </ul>
 <h3 id="102-2023-04-03"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.0.1...v1.0.2">1.0.2</a> (2023-04-03)</h3>
-<h3 id="🐛-bug-fixes-20">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-21">🐛 Bug Fixes</h3>
 <ul>
 <li>correct docker build (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/b62c12930ca927844689c723ca1c33942cb4868b">b62c129</a>)</li>
 </ul>
@@ -382,7 +387,7 @@
 <li>use node https instead of axios (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/12b86a7ecbbe53308bc95526f9f72593ea430200">12b86a7</a>)</li>
 <li>User Profile cards (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/5">#5</a>) (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/64372f4fb75589cd9c633c79b9e2029c3ac8cab1">64372f4</a>)</li>
 </ul>
-<h3 id="🐛-bug-fixes-21">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-22">🐛 Bug Fixes</h3>
 <ul>
 <li>add awaits (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/14a5e2804c497c9938d5595879e2f9b9d54d6054">14a5e28</a>)</li>
 <li>correct application return type image (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/a0e6d3f55e43e326c8a4bf8a31d027b41040b37d">a0e6d3f</a>)</li>
