fix: fetch insight and insight repositories in parallel (#79) e3675470dcc0acb9cd2a978f01144240bf452b71

--- a/interfaces/DbInsight.html
+++ b/interfaces/DbInsight.html
@@ -462,7 +462,7 @@
   repos: DbUserInsightRepo[];
 }
 
-interface DbUserInsightRepo {
+export interface DbUserInsightRepo {
   readonly id: number;
   readonly insight_id: number;
   readonly repo_id: number;
